{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 1006,
  "lineage": "3579f0d2-ec75-7204-33cd-a791de6cdd4b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:145849409477:internet-gateway/igw-0aa710bca51edca5a",
            "id": "igw-0aa710bca51edca5a",
            "owner_id": "145849409477",
            "tags": {
              "Environment": "test",
              "Name": "test-igw-01"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-igw-01"
            },
            "vpc_id": "vpc-074861472dc42dd3e"
          },
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-lb-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:145849409477:loadbalancer/app/test-lb-01/c22b288dcd9482f1",
            "arn_suffix": "app/test-lb-01/c22b288dcd9482f1",
            "dns_name": "test-lb-01-877551329.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:145849409477:loadbalancer/app/test-lb-01/c22b288dcd9482f1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-01",
            "security_groups": [
              "sg-0d7e3f56d513a6205"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0605ed67faa4524ce"
              },
              {
                "subnet_id": "subnet-0c2a190f213d3e9bd"
              }
            ],
            "subnets": [
              "subnet-0605ed67faa4524ce",
              "subnet-0c2a190f213d3e9bd"
            ],
            "tags": {
              "Environment": "test",
              "Name": "test-elb-01"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-elb-01"
            },
            "vpc_id": "vpc-074861472dc42dd3e",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.elb_http",
            "aws_subnet.test-pub-subnet-01",
            "aws_subnet.test-pub-subnet-02",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:145849409477:listener/app/test-lb-01/c22b288dcd9482f1/75d34702bac39afe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:145849409477:targetgroup/tf-20210803162138500100000001/11c884aa50c2e4af",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:145849409477:listener/app/test-lb-01/c22b288dcd9482f1/75d34702bac39afe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:145849409477:loadbalancer/app/test-lb-01/c22b288dcd9482f1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test-lb-01",
            "aws_lb_target_group.my_alb_target_group",
            "aws_security_group.elb_http",
            "aws_subnet.test-pub-subnet-01",
            "aws_subnet.test-pub-subnet-02",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:145849409477:targetgroup/tf-20210803162138500100000001/11c884aa50c2e4af",
            "arn_suffix": "targetgroup/tf-20210803162138500100000001/11c884aa50c2e4af",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:145849409477:targetgroup/tf-20210803162138500100000001/11c884aa50c2e4af",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20210803162138500100000001",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 1800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "alb_target_group"
            },
            "tags_all": {
              "name": "alb_target_group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-074861472dc42dd3e"
          },
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-pub-rt-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:145849409477:route-table/rtb-0a5d79b13a02acf13",
            "id": "rtb-0a5d79b13a02acf13",
            "owner_id": "145849409477",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa710bca51edca5a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-pub-rt-01"
            },
            "tags_all": {
              "Name": "test-pub-rt-01"
            },
            "vpc_id": "vpc-074861472dc42dd3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-igw-01",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-rt-association-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0176552635cd13672",
            "route_table_id": "rtb-0a5d79b13a02acf13",
            "subnet_id": "subnet-0c2a190f213d3e9bd"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw-01",
            "aws_route_table.test-pub-rt-01",
            "aws_subnet.test-pub-subnet-01",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-rt-association-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063387c620f92c56f",
            "route_table_id": "rtb-0a5d79b13a02acf13",
            "subnet_id": "subnet-0605ed67faa4524ce"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw-01",
            "aws_route_table.test-pub-rt-01",
            "aws_subnet.test-pub-subnet-02",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:145849409477:security-group/sg-0d7e3f56d513a6205",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7e3f56d513a6205",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "145849409477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP Security Group"
            },
            "tags_all": {
              "Name": "Allow HTTP Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-074861472dc42dd3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-autoscaling-sg-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:145849409477:security-group/sg-09a5e0c803e5ddabc",
            "description": "AutoScaling-Security-Group-1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a5e0c803e5ddabc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-autoscaling-sg-01",
            "name_prefix": "",
            "owner_id": "145849409477",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-074861472dc42dd3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-pub-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:145849409477:subnet/subnet-0c2a190f213d3e9bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.15.10.0/24",
            "id": "subnet-0c2a190f213d3e9bd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145849409477",
            "tags": {
              "Name": "test-subnet-01"
            },
            "tags_all": {
              "Name": "test-subnet-01"
            },
            "vpc_id": "vpc-074861472dc42dd3e"
          },
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-pub-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:145849409477:subnet/subnet-0605ed67faa4524ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.15.20.0/24",
            "id": "subnet-0605ed67faa4524ce",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145849409477",
            "tags": {
              "Name": "test-subnet-02"
            },
            "tags_all": {
              "Name": "test-subnet-02"
            },
            "vpc_id": "vpc-074861472dc42dd3e"
          },
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:145849409477:vpc/vpc-074861472dc42dd3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.15.0.0/16",
            "default_network_acl_id": "acl-058b3a2107cffe7d9",
            "default_route_table_id": "rtb-0aa9dcee3ea3d99ac",
            "default_security_group_id": "sg-007c3659a5bba369a",
            "dhcp_options_id": "dopt-be5c64c6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-074861472dc42dd3e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aa9dcee3ea3d99ac",
            "owner_id": "145849409477",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-01"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-01"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}